// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModuleService should render correctly 1`] = `
<DocumentFragment>
  <ul
    class="m-service foo"
    componenttype="nav"
    itemscope=""
    itemtype="https://schema.org/ItemList"
    role="list"
  >
    <li
      class="m-service__item--left"
      itemprop="itemListElement"
    >
      <div
        class="m-service__content"
      >
        <div
          class="m-service__icon"
        >
          <i
            aria-hidden="true"
            class="c-font-icon--happy m-service__icon-font"
          />
        </div>
        <div
          class="m-service__description"
        >
          <h3
            class="is-centered c-type--h3 m-service__headline"
          >
            headline happy
          </h3>
          <p
            class="c-type--p m-service__text"
          >
            text happy
          </p>
        </div>
      </div>
    </li>
    <li
      class="m-service__item--right"
      itemprop="itemListElement"
    >
      <div
        class="m-service__content"
      >
        <div
          class="m-service__icon"
        >
          <i
            aria-hidden="true"
            class="c-font-icon--xing m-service__icon-font"
          />
        </div>
        <div
          class="m-service__description"
        >
          <h3
            class="is-centered c-type--h3 m-service__headline"
          >
            headline xing
          </h3>
          <p
            class="c-type--p m-service__text"
          >
            text xing
          </p>
        </div>
      </div>
    </li>
    <li
      aria-hidden="true"
      class="m-service__item--clear"
    />
    <li
      class="m-service__item--left"
      itemprop="itemListElement"
    >
      <div
        class="m-service__content"
      >
        <div
          class="m-service__icon"
        >
          <i
            aria-hidden="true"
            class="c-font-icon--facebook m-service__icon-font"
          />
        </div>
        <div
          class="m-service__description"
        >
          <h3
            class="is-centered c-type--h3 m-service__headline"
          >
            headline facebook
          </h3>
          <p
            class="c-type--p m-service__text"
          >
            text facebook
          </p>
        </div>
      </div>
    </li>
    Module service children
  </ul>
</DocumentFragment>
`;

exports[`ModuleService should render no itemType if unset 1`] = `
<DocumentFragment>
  <ul
    class="m-service foo"
    componenttype="nav"
    role="list"
  >
    <li
      class="m-service__item--left"
      itemprop="itemListElement"
    >
      <div
        class="m-service__content"
      >
        <div
          class="m-service__icon"
        >
          <i
            aria-hidden="true"
            class="c-font-icon--happy m-service__icon-font"
          />
        </div>
        <div
          class="m-service__description"
        >
          <h3
            class="is-centered c-type--h3 m-service__headline"
          >
            headline happy
          </h3>
          <p
            class="c-type--p m-service__text"
          >
            text happy
          </p>
        </div>
      </div>
    </li>
    <li
      class="m-service__item--right"
      itemprop="itemListElement"
    >
      <div
        class="m-service__content"
      >
        <div
          class="m-service__icon"
        >
          <i
            aria-hidden="true"
            class="c-font-icon--xing m-service__icon-font"
          />
        </div>
        <div
          class="m-service__description"
        >
          <h3
            class="is-centered c-type--h3 m-service__headline"
          >
            headline xing
          </h3>
          <p
            class="c-type--p m-service__text"
          >
            text xing
          </p>
        </div>
      </div>
    </li>
    <li
      aria-hidden="true"
      class="m-service__item--clear"
    />
    <li
      class="m-service__item--left"
      itemprop="itemListElement"
    >
      <div
        class="m-service__content"
      >
        <div
          class="m-service__icon"
        >
          <i
            aria-hidden="true"
            class="c-font-icon--facebook m-service__icon-font"
          />
        </div>
        <div
          class="m-service__description"
        >
          <h3
            class="is-centered c-type--h3 m-service__headline"
          >
            headline facebook
          </h3>
          <p
            class="c-type--p m-service__text"
          >
            text facebook
          </p>
        </div>
      </div>
    </li>
    Module service children
  </ul>
</DocumentFragment>
`;

exports[`ModuleService should return null if no content is given 1`] = `<DocumentFragment />`;
